examples/test/testpolicy13531.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13531
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key47: value25
      key3: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value10
          key3: value26
      podSelector:
        matchLabels:
          key40: value41
          key34: value18
